Refactor - remove unused imports, WorldCupScoreboard::getMAtchSummary returns an immutable list